# cx-shell

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.sh  cx.lock.json  cx.project.yaml  cx.spec  flake.nix  package-lock.json  package.json  pyproject.toml  result
.cx/store/system/: toolkit
.github/workflows/: release.yml
scripts/: install.sh
src/cx_shell/: _bootstrap.py  cli.py  history_logger.py  main.py  state.py  utils.py
src/cx_shell/agent/: analyst_agent.py  base_agent.py  llm_client.py  planner_agent.py  tool_specialist_agent.py
src/cx_shell/assets/configs/: agents.default.yaml
src/cx_shell/assets/connections/: fs_generic.conn.yaml  github.conn.yaml  system_python_sandbox.conn.yaml  system_smart_fetcher.conn.yaml
src/cx_shell/assets/system-lib/compilers/: blueprint_generator.py  google_discovery_adapter.py  openapi_adapter.py  spec_compiler.py
src/cx_shell/assets/system-tasks/: compile.connector.yaml
src/cx_shell/assets/templates/publish/: report.html
src/cx_shell/data/: agent_schemas.py  process_schemas.py
src/cx_shell/engine/: context.py
src/cx_shell/engine/connector/: cli.py  config.py  engine.py  main.py  service.py  utils.py  vfs_reader.py
src/cx_shell/engine/transformer/: cli.py  main.py  service.py  vfs_client.py
src/cx_shell/environments/: base.py  nix_provider.py  venv_provider.py
src/cx_shell/interactive/: agent_orchestrator.py  commands.py  completer.py  context_engine.py  executor.py  main.py  output_handler.py  session.py
src/cx_shell/interactive/grammar/: cx.lark
src/cx_shell/management/: app_manager.py  belief_manager.py  cache_manager.py  compile_manager.py  connection_manager.py  find_manager.py  flow_converter.py  flow_manager.py  index_manager.py  install_manager.py  notebook_parser.py  open_manager.py  process_manager.py  publisher.py  query_manager.py  registry_manager.py  script_manager.py  session_manager.py  shell_manager.py  upgrade_manager.py  variable_manager.py  workspace_manager.py
src/cx_shell/management/renderers/: archive_renderer.py  base.py  html_renderer.py  pdf_renderer.py
src/cx_shell/server/: main.py
tests/: conftest.py
tests/e2e/: test_agent_workflows.py
tests/engine/: test_script_engine.py
tests/engine/connector/: test_resolver.py
tests/interactive/: test_executor.py
tests/management/: test_upgrade_manager.py
(+46 files in other folders)
